# temple-shrine-esp32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  platformio.ini  sdkconfig.defaults
boards/: defcon-badge.json
src/: CMakeLists.txt  audio.c  audio.h  bible.c  bible.h  display.c  display.h  font8x8.h  game_afteregypt.c  game_bombergolf.c  game_chronicle.c  game_digits.c  game_flapbat.c  game_hymn.c  game_oracle.c  game_raindrops.c  game_slider.c  game_squirt.c  game_talons.c  game_tictactoe.c  game_whap.c  games.h  hw.h  hymns.h  input.c  input.h  main.c  menu.c  menu.h  palette.h  scene_fb.c  scene_fb.h  shrine.c  shrine.h  splash.c  splash.h  sprite_decoder.c  sprite_decoder.h  templeshim.c  templeshim.h  (+1 more)
src/harness/: CMakeLists.txt  README.md  SPRITE_NOTES.md  audio_sdl.c  display_sdl.c  input_sdl.c  main_sdl.c
tools/: bombergolf_vector_sprites.h  disasm_sprite.py  dump_sprites.py  extract_sprites.py  extract_vector_sprites.py  flapbat_sprites.h  flapbat_vector_sprites.h
